<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp">

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/enter"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="vertical">


            <EditText
                style="@style/LargeEditTextStyle"
                android:autofillHints="username"
                android:drawableStart="@drawable/ic_person"
                android:hint="@string/user_name"
                android:inputType="textPersonName" />


            <EditText
                style="@style/LargeEditTextStyle"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:inputType="textPassword" />


        </LinearLayout>

        <include layout="@layout/or_line" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <Button
                style="@style/LargeButtonStyle"
                android:drawableStart="@drawable/ic_login"
                android:text="@string/itmo_id"
                android:onClick="itmoIdLogin"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            style="@style/SimpleButtonStyle"
            android:layout_marginBottom="30dp"
            android:onClick="login"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle"
                android:text="@string/no_account" />

            <TextView
                style="@style/LinkTextStyle"
                android:onClick="goToRegistration"
                android:text="@string/register" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>